updated under construction page with logo

--- a/components/sass/_medium.scss
+++ b/components/sass/_medium.scss
@@ -1,3 +1,8 @@
+@media screen and (max-width: 1000px){
+header h1 {
+	font-size: 3em;
+}
+}
 @media screen and (max-width: 799px){
 #bg-div-one {
 	display: block;
