--- a/components/sass/_large.scss
+++ b/components/sass/_large.scss
@@ -7,7 +7,7 @@ header {
 header h1 {
 	font-size: 4em;
 	font-weight: bold;
-	color: #005692;
+	color: #28388d;
 	padding: 100px 0px 5px 0px;
 	border-bottom: 2px solid #757575;
 }
