--- a/components/sass/_large.scss
+++ b/components/sass/_large.scss
@@ -99,7 +99,7 @@ footer {
 	position: relative;
 	float: left;
 	width: 100%;
-	height: 80px;
+	height: 120px;
 	border-top: 15px solid #767676;
 	margin-top: 30px;
 	padding-top: 20px;
@@ -137,6 +137,21 @@ footer {
 	.fa-phone-square {
 		color: #3b3b3b;
 		padding-right: 5px;
+	}
+	.copyright {
+		font-size: .6em;
+		position: absolute;
+		bottom: 5px;
+		right: 30px;
+		color: #7a7a7a;
+	}
+	a {
+		color: inherit;
+		text-decoration: none;
+		&:hover {
+			color: inherit;
+			text-decoration: underline;
+		}
 	}
 }
 #success {
