--- a/components/sass/_large.scss
+++ b/components/sass/_large.scss
@@ -115,6 +115,9 @@ footer {
 		float: left;
 		width: 33%;
 		text-align: center;
+		p {
+			line-height: 1.25em;
+		}
 	}
 	#right {
 		float: right;
